samples/_failures_safe/1761653600_1e24d9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_559aedeb.c: In function ‘parser_init’:
./samples/SAFE/__tmp_559aedeb.c:152:5: error: expected identifier at end of input
  152 |     parser->
      |     ^~~~~~
./samples/SAFE/__tmp_559aedeb.c:152:5: error: expected declaration or statement at end of input
